--- a/README.org
+++ b/README.org
@@ -30,6 +30,6 @@ add 'code' to path:
 
 ```
 cd ~
-curl --remote-name https://raw.githubusercontent.com/fire-ant/dotflies/master/dot_laptop.local
-mv dot_laptop.local .laptop.local
+curl --remote-name https://raw.githubusercontent.com/fire-ant/dotflies/master/setup_dot_sh
+mv setup_dot_sh setup.sh && chmod +x setup,sh
 ```
